--- a/src/book.css
+++ b/src/book.css
@@ -1,11 +1,12 @@
+
+
 @page {
     size: B5;
     @bottom-center {
         content: counter(page);
     }
+  
 }
-
-
 nav#TOC {
     break-before:  page;
 }
@@ -14,6 +15,14 @@ div#imprint {
     break-before: page;
 }
 
+div.block {
+    border: 1px;
+    border-style: solid;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding-left: 10px;
+    padding-bottom:10px;
+}
 
 h1 {
     break-before: page;
@@ -21,7 +30,7 @@ h1 {
 
 /* 本文 */
 h1,h2,h3 {
-    font-family: "Source Han Code JP N";
+    font-family: "Source Han Sans";
 }
 
 h1 {
@@ -32,6 +41,9 @@ h2 {
     font-size: 16pt;
 }
 
+h3 {
+    font-size: 12pt;
+}
 p a {
     font-family: "Ricty Diminished";
     color: black;
@@ -65,6 +77,7 @@ li code {
 
 img {
     max-width: 500px;
+    max-height: 80mm;
     height: auto;
 }
 
@@ -86,7 +99,7 @@ pre  {
 }
 
 div.listing p {
-    font-family: "Source Han Code JP N";
+    font-family: "Source Han Sans";
     font-size: 11px;
     margin: 0; 
     padding: 0;
@@ -106,22 +119,22 @@ div.listing {
 }
 
 #TOC ul li {
-    font-family: "Source Han Code JP N";
+    font-family: "Source Han Sans";
     font-size: 14px;
 }
 
 /* 中表紙 */
 h2#title1 {
-    font-family: "Source Han Code JP N" !important;
+    font-family: "Source Han Sans" !important;
     font-size:9pt;
 }
 h2#title2 {
-    font-family: "Source Han Code JP N" !important;
+    font-family: "Source Han Sans" !important;
     font-size: 14pt;
 }
 
 #author p {
-    font-family: "Source Han Code JP N";
+    font-family: "Source Han Sans";
     font: size 12pt;
 }
 
@@ -155,12 +168,12 @@ td.key {
 
 @font-face {
     font-family: "Source Han Serif";
-    src: url(SourceHanSerif-Regular.otf) format('truetype')
+    src: url(SourceHanSerif-Regular.otf) format('opentype')
 }
 
 @font-face {
-    font-family: "Source Han Code JP N";
-    src: url(SourceHanSans-Normal.otf) format('opentype')
+    font-family: "Source Han Sans";
+    src: url(SourceHanSans-Regular.otf) format('opentype')
 }
 @font-face {
     font-family: "Ricty Diminished";
@@ -172,4 +185,9 @@ td.key {
     float: footnote;
 }
 
-
+/* ヘッダー */
+@page {
+     @top-center {
+        content: "はじめに";
+    }
+}
